--- a/composer.json
+++ b/composer.json
@@ -3,21 +3,23 @@
     "description": "A kafka driver for laravel",
     "type": "library",
     "require": {
-        "php": "^8.1|^8.2",
+        "php": "^7.4|^8.1|^8.2",
         "ext-rdkafka": "^5.0|^6.0",
         "monolog/monolog": "^2.3|^3.2",
         "flix-tech/avro-serde-php": "^1.7",
-        "illuminate/support": "^9.0|^10.0",
-        "illuminate/contracts": "^9.0|^10.0"
+        "illuminate/support": "^7.0|^9.0|^10.0",
+        "illuminate/contracts": "^7.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^7.16|^8.0",
+        "orchestra/testbench": "^5.0|^7.16|^8.0",
         "predis/predis": "^1.1",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "kwn/php-rdkafka-stubs": "^2.2"
+        "kwn/php-rdkafka-stubs": "^2.2",
+        "rector/rector": "*"
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Junges\\Kafka\\": "src/"
